@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 <form action="/login/login" method="post">
     Username: <input type="text" name="username" style="width:50px;"/>
     <input type="submit" value="Login" />
