@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 <form action="/login/logout" method="post">
     Welcome, {username}!
     <input type="submit" value="Logout" />
