@@ -1,5 +1,4 @@
 <div class="left-panel">
-    <label class="summary">Game Summary - Known Bots</label>
     {bot}
 </div>
 <div class="right-panel">
