@@ -58,4 +58,8 @@ MM/DD/YY @ HH:MM - Description of change - (Initials)
 02/14/16 @ 15:30 - Modified portfolio.php view - (JL)
 02/14/16 @ 22:27 - Modified login.php view - (JL)
 
-02/15/16 @ 14:40 - Modified login.php view/controller for Mickey default - (SS)
+02/15/16 @ 14:40 - Modified login.php view/controller - (SS)
+02/15/16 @ 15:02 - Modified portfolio view/controller to show proper selections - (JL)
+02/15/16 @ 16:05 - Modified assembly view/controller to show proper selections - (JL, SS)
+02/15/16 @ 17:48 - Modified welcome view/controller to show game summary - (JL)
+02/15/16 @ 18:58 - Modified CSS files for better visuals - (JL, SS)
